==> UbiLAB-project/UbiLAB-Laboratory-manuals/lab_heater_and_wind_system/code_levitation_system/AIR_CubeIDE/Core/Src/VL53L0X.c <==
#include "VL53L0X.h"
#include "I2CDev.h"
#include "stm32f7xx_hal.h" //SELECT proper MCU !!!!!!!! //OCTOBER 2019 AS
#include <stdbool.h>
#include <stdlib.h>
#include <stdint.h>
#include <string.h>
#define I2C &hi2c4  //SELECT proper I2C !!!!!!!! //OCTOBER 2019 AS
	#define HIGH_ACCURACY  //Time to read 1.3ms

void writeReg(VL53L0X * lidar,uint8_t reg, uint8_t value)
{
	writeByte(I2C,lidar->address,reg,value);
	lidar->last_status = 0;
}

void writeReg16Bit(VL53L0X * lidar,uint8_t reg, uint16_t value)
{
  writeWord(I2C,lidar->address,reg,value);
  lidar->last_status = 0;
}

void writeReg32Bit(VL53L0X * lidar,uint8_t reg, uint32_t value)
{
  write32Bits(I2C,lidar->address,reg,value);
  lidar->last_status = 0;
}

uint8_t readReg(VL53L0X * lidar,uint8_t reg)
{
  uint8_t value;
  readByte(I2C,lidar->address,reg,&value,I2CTIMEOUT);

  lidar->last_status = 0;
  return value;
}

uint16_t readReg16Bit(VL53L0X * lidar,uint8_t reg)
{
  uint16_t value;
  readWord(I2C,lidar->address,reg,&value,I2CTIMEOUT);

  lidar->last_status = 0;
  return value;
}

uint32_t readReg32Bit(VL53L0X * lidar,uint8_t reg)
{
  uint32_t value;
  read32Bits(I2C,lidar->address,reg,&value,I2CTIMEOUT);
  lidar->last_status = 0;
  return value;
}

void startTimeout(VL53L0X * lidar)
{
	lidar->timeout_start_ms = HAL_GetTick();
}

void readMulti(VL53L0X * lidar,uint8_t reg, uint8_t * dst, uint8_t count)
 {
     /* Send register address */
     if (HAL_I2C_Master_Transmit(&hi2c4, SLAVE_ADDRESS<<1, &reg, 1, 1000) != HAL_OK)
       {
         {
            // _Error_Handler(__FILE__, __LINE__);
         }
       }

     /* Receive multiple byte */
     if (HAL_I2C_Master_Receive(&hi2c4, ((SLAVE_ADDRESS <<1) | 0x01), dst, count, 1000) != HAL_OK)
       {
          //_Error_Handler(__FILE__, __LINE__);
       }
 }

 void writeMulti(VL53L0X * lidar,uint8_t reg, uint8_t* src, uint8_t count)
 {
          /* Try to transmit via I2C */
         if(HAL_I2C_Mem_Write(&hi2c4, SLAVE_ADDRESS<<1, reg, reg>0xFF ? I2C_MEMADD_SIZE_16BIT : I2C_MEMADD_SIZE_8BIT, src, count, 1000) != HAL_OK)
             {
                //_Error_Handler(__FILE__, __LINE__);
             }

 }
