==> DiazGopar/ble_chrono_drimiun/VL53L0X.cpp <==
#include "VL53L0X.h"
#include <stdbool.h>
#include <stdint.h>
#include "app_error.h"
#include "app_timer.h"
#include "nrf_drv_clock.h"
#include <stdio.h>
#include "boards.h"
#include "app_util_platform.h"
#include "nrf_drv_twi.h"
#include "nrf_delay.h"
#include "nrf_gpio.h"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_log_default_backends.h"
#define ADDRESS_SENSOR (0x52U >> 1)//peter last bit wil be set with read or write
#define decodeVcselPeriod(reg_val)      (((reg_val) + 1) << 1)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define TWI_INSTANCE_ID     0

void VL53L0X::startTimeout()
{
  timeout_start_ms=((uint16_t)(app_timer_cnt_get() / 32.768));
}

void VL53L0X::writeReg(uint8_t regist, uint8_t value)
{
    uint8_t reg[2] = {regist, value};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

void VL53L0X::writeReg16Bit(uint8_t regist, uint16_t value)
{
    uint8_t reg[3] = {regist, (value >> 8) & 0xFF,value & 0xFF};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

void VL53L0X::writeReg32Bit(uint8_t regist, uint32_t value)
{

    uint8_t reg[5] = {regist, (value >> 24) & 0xFF, (value >> 16) & 0xFF, (value >> 8) & 0xFF,value & 0xFF};

    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

uint8_t VL53L0X::readReg(uint8_t regist)
{
    uint8_t *waarde;
    
    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);

   
    /* Read 1 byte from the specified address  */
    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, &m_sample, 1);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);

   return m_sample;
}

uint16_t VL53L0X::readReg16Bit(uint8_t regist)
{
  uint16_t value;
  uint8_t waarde[2];
  ret_code_t err_code;

    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);

    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, waarde, 2);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);
    value  = (uint16_t)waarde[0] << 8; // value high byte
    value |=           waarde[1];      // value low byte

  return value;
}

uint32_t VL53L0X::readReg32Bit(uint8_t regist)
{
  uint32_t value;
  uint8_t waarde[4];

    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);


    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, waarde, 4);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);
    value  = waarde[3] << 24; // value high byte
    value |= waarde[2] << 16; // value low byte
    value |= waarde[1] << 8;  // value high byte
    value |= waarde[0];       // value low byte


  return value;
}

void VL53L0X::writeMulti(uint8_t regist, uint8_t const * src, uint8_t count)
{
///  Wire.beginTransmission(address);
//  Wire.write(reg);

    uint8_t r[1] ;
    r[0]=regist;
    uint8_t reg[count];
    //reg[0]=regist;
    for(int x=0;x<count;x++)
    {
      reg[x]=*(src++);
    }
    ret_code_t err_code;

    m_xfer_done = false;
    err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, r, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);


    m_xfer_done = false;
    err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

void VL53L0X::readMulti(uint8_t regist, uint8_t * dst, uint8_t count)
{

  uint8_t waarde[count];

    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);

    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, waarde,count);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);

  while (count-- > 0)
  {
    *(dst++) = waarde[count];
  }
}
